# langding

./: .env.example  .gitignore  .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  CNAME  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  requirements.dev.txt  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  documentation.md  feature_request.md  question.md  security_report.md
.github/workflows/: ci.yml  python.yml  release-controller.yml
src/: config.py  logger.py  main.py
templates/: index.html
tests/: __init__.py  conftest.py  test_integration.py  test_logger.py  test_translator.py
